--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
 [theme]
 base="light"
-primaryColor="#FFAF06"
-secondaryBackgroundColor="#FFAF06"
+primaryColor="#E31818"
+secondaryBackgroundColor="#FF8300"
